# openapi_server/controllers/mass_spectrometry_controller.py
@@ -1,24 +1,22 @@
 import connexion
 import six
-from os import getenv
 
-## OpenAPI generated Code stuff
 from openapi_server import util
-from openapi_server.controllers.mass_spectrometry_controller_impl import convert_pwi_zmz_xml2mz_ml_impl
 
-def convert_pwi_zmz_xml2mz_ml(body=None):  # noqa: E501
+import openapi_server.server_impl.controllers_impl.mass_spectrometry_controller_impl as MassSpectrometryController_impl
+
+#from openapi_server.server_impl.controllers_impl.mass_spectrometry_controller_impl import MassSpectrometryController_impl
+
+def convert_pwi_zmz_xml2mz_ml(profile=None, inputfile=None):  # noqa: E501
     """Convert mzXML mass spectrometry raw data to mzML
 
     Uses Proteowizard MSConvert to convert an mzXML file into mzML # noqa: E501
 
-    :param body:
-    :type body: str
+    :param profile: 
+    :type profile: str
+    :param inputfile: 
+    :type inputfile: str
 
     :rtype: file
     """
-
-    runner = "local" # Default
-    if getenv("TAPIR_RUNNER") is not None:
-        runner = getenv("TAPIR_RUNNER")
-
-    return convert_pwi_zmz_xml2mz_ml_impl(body, runner=runner)
+    return MassSpectrometryController_impl.convert_pwi_zmz_xml2mz_ml(profile, inputfile)  # noqa: E501
