# src/server_impl/controllers_impl/default_controller_impl.py
@@ -1,0 +1,24 @@
+import connexion
+import six
+
+from openapi_server import util
+
+def list_get():  # noqa: E501
+    """Get list of all convertes and their possible targets
+
+     # noqa: E501
+
+
+    :rtype: str
+    """
+    return "Something cool"  # noqa: E501
+
+def ping_get():  # noqa: E501
+    """Check if server alive
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return "Something cool"  # noqa: E501
